Emails List Data model

--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -68,7 +68,22 @@
         </nav>
 
         <main>
-            <p>Email List</p>
+            <div class="card" th:if="${emailsList}">
+                <div class="card-header">
+                    Inbox
+                </div>
+                <div class="card-body">
+                    <div class="list-group">
+                        <a th:each="message: ${emailsList}" href="#" class="list-group-item list-group-item-action">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1" th:text="${message.subject}">List group item heading</h5>
+                                <small>3 days ago</small>
+                            </div>
+                            <p class="mb-1" th:text="${message.to}">Some placeholder content in a paragraph.</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <footer>
