emails list shownm in UI and pretty time dependency

--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -77,7 +77,7 @@
                         <a th:each="message: ${emailsList}" href="#" class="list-group-item list-group-item-action">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1" th:text="${message.subject}">List group item heading</h5>
-                                <small>3 days ago</small>
+                                <small th:text="${message.agoTimeString}">3 days ago</small>
                             </div>
                             <p class="mb-1" th:text="${message.to}">Some placeholder content in a paragraph.</p>
                         </a>
