Fetch message details with UUID

--- a/src/main/resources/templates/email-page.html
+++ b/src/main/resources/templates/email-page.html
@@ -59,7 +59,7 @@
 
 <div class="container">
     <header>
-        <h1>Welcome, Name</h1>
+        <h1 th:text="${name}">Welcome, name</h1>
     </header>
 
     <nav>
