Compose Controller and compose view

--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -63,6 +63,9 @@
         </header>
 
         <nav>
+            <div class="card">
+                <a href="/compose" class="btn btn-primary">Compose Message</a>
+            </div>
             <div th:insert="components/folder-list :: folder-list (panelName = 'Default Folders', folders = ${defaultFolders})"></div>
             <div th:insert="components/folder-list :: folder-list (panelName = 'User Folders', folders = ${userFolders})"></div>
         </nav>
