--- a/src/main/resources/templates/compose-page.html
+++ b/src/main/resources/templates/compose-page.html
@@ -63,38 +63,32 @@
     </header>
 
     <nav>
-        <div class="card">
-            <a href="/compose" class="btn btn-primary">Compose Message</a>
-        </div>
         <div th:insert="components/folder-list :: folder-list (panelName = 'Default Folders', folders = ${defaultFolders})"></div>
         <div th:insert="components/folder-list :: folder-list (panelName = 'User Folders', folders = ${userFolders})"></div>
     </nav>
 
     <main>
         <div class="card">
-            <div class="card-header">View Email</div>
-            <dl class="card-body">
-                <div class="mb-3">
-                    <dt class="form-label">From</dt>
-                    <dd th:text="${email.from}"></dd>
-                </div>
-                <div class="mb-3">
-                    <dt class="form-label">To</dt>
-                    <dd th:text="${toIds}"></dd>
-                </div>
-                <div class="mb-3">
-                    <dt class="form-label">Subject</dt>
-                    <dd th:text="${email.subject}"></dd>
-                </div>
-                <div class="mb-3">
-                    <dt class="form-label">Body</dt>
-                    <dd th:text="${email.body}"></dd>
-                </div>
+            <div class="card-header">Create New Email</div>
+            <div class="card-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="toIds" class="form-label">To</label>
+                        <input type="text" th:value="${toIds}" class="form-control" id="toIds" aria-describedby="emailHelp">
+                        <div id="toIdHelp" class="form-text">Enter comma seperated Github ID's fo your recipients</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="subject" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="subject">
+                    </div>
+                    <div class="mb-3">
+                        <label for="body" class="form-label">Body</label>
+                        <textarea rows="8" type="text" class="form-control" id="body"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
 
-                <a th:href="@{'/compose?to=' + ${email.from}}" type="button" class="btn btn-primary">Reply</a>
-                <a th:href="@{'/compose?to=' + ${email.from} + ',' + ${toIds}}" type="button" class="btn btn-primary">Reply All</a>
-                <a href="/" class="btn btn-secondary" type="button">Cancel</a>
-            </dl>
         </div>
     </main>
 
